--- a/css/styles.css
+++ b/css/styles.css
@@ -98,8 +98,8 @@ margin-bottom:1rem;
 }
 
 .testimonial-text{
-  font-size: 2.2rem;
-  line-height: 1.5;
+  font-size:2.2rem;
+  line-height:1.5;
 }
 
 .testimonial-image{
@@ -136,7 +136,7 @@ margin: 20px 20px 50px;
 
 .price-text{
   font-size: 2.2rem;
-  line-height: 1.5;
+  line-height:1.5;
 }
 
 .pricing-column{
@@ -151,7 +151,7 @@ margin: 20px 20px 50px;
 
 .cta-h3{
   color: #fff;
-  font-family:"Montserrat".sans-serif;
+  font-family:"Montserrat",sans-serif;
   font-weight: 900;
   font-size: 2.8rem;
   line-height: 1.5;
